 - Conversion from string to `char const *` is no longer allowed.
 - Binary data can be any `std::contiguous_range` of `std::byte`. (#925)
 - Generic `quote()` takes `always_null` into account.
 - You can now convert strings to `pqxx::array` types.
 - There are fewer raw pointers in the API, for safety & verifiability.
 - The libpqxx exceptions now have a `std::source_location`. (#923)
 - More getters are now `noexcept`.
 - Retired `binarystring` and its headers.  Use `blob` instead.
 - Retired `connection_base` type alias.  Use `connection`.
 - Retired `pqxx::encrypt_password()`.  Use the ones in `pqxx::connection`.
 - Retired `pqxx::prepare::dynamic_params`.  Use `pqxx::params`.
 - Retired deprecated `stream_to` constructors.  Use factory functions.
 - Retired `transaction_base::unesc_raw()`.  Use `unesc_bin()`.
 - Retired `transaction_base::quote_raw()`.  Use `quote()` with `bytes_view`.
 - Deprecated `field` constructors are no longer publicly accessible.
 - Assume compiler supports concepts.
 - Assume compiler supports integral conversions in `charconv`.
 - Assume compiler supports spans, ranges, and `cmp_less` etc.
 - Retired result row slicing.
 - Assume compiler supports `std::remove_cvref_t` etc.
 - Assume compiler supports `std::filesystem::path`.
 - Assume compiler supports `[[likely]]` & `[[unlikely]]`.
 - Assume compiler supports `ssize()`.
 - Assume compiler supports `std::source_location`.
 - Assume compiler supports ISO-646 without needing `<ciso646>` header.
 - Feel free to use `pqxx::encoding_group`.  It's no longer "internal."
 - There's now an `UNKNOWN` encoding group.  It's the only fully safe default.
 - Array parsing will refuse to work if the encoding group is `UNKNOWN`.
 - Tests are now in a single directory (#934)
7.10.2
 - CMake: Drop unneeded, broken `PostgreSQL_INCLUDE_DIRS` definition. (#981)
 - Handle spaces and single quotes in `connection::connection_string()` (#992)
7.10.1