@@ -12,7 +12,8 @@ void test_result_iteration()
   pqxx::connection cx;
   pqxx::work tx{cx};
   pqxx::result r{tx.exec("SELECT generate_series(1, 3)")};
-  static_assert(std::forward_iterator<decltype(r.begin())>);
+  static_assert(std::random_access_iterator<decltype(r.begin())>);
+  static_assert(std::random_access_iterator<decltype(r.begin()->begin())>);
 
   PQXX_CHECK(std::end(r) != std::begin(r), "Broken begin/end.");
   PQXX_CHECK(std::rend(r) != std::rbegin(r), "Broken rbegin/rend.");
